--- a/002.대구 교통사고 피해 예측 AI 경진대회/code/002. predict.ipynb
+++ b/002.대구 교통사고 피해 예측 AI 경진대회/code/002. predict.ipynb
@@ -2,15 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "11fc8030",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-28T07:46:50.653760Z",
-     "start_time": "2023-11-28T07:46:50.432577Z"
+     "end_time": "2023-11-29T03:58:27.423802Z",
+     "start_time": "2023-11-29T03:58:24.695122Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<frozen importlib._bootstrap>:228: RuntimeWarning: scipy._lib.messagestream.MessageStream size changed, may indicate binary incompatibility. Expected 56 from C header, got 64 from PyObject\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -29,8 +37,8 @@
    "id": "63bfe296",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-28T07:38:55.646634Z",
-     "start_time": "2023-11-28T07:38:55.585708Z"
+     "end_time": "2023-11-29T03:58:27.504317Z",
+     "start_time": "2023-11-29T03:58:27.428662Z"
     }
    },
    "outputs": [],
@@ -53,8 +61,8 @@
    "id": "25a25bc5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-28T07:38:55.662467Z",
-     "start_time": "2023-11-28T07:38:55.648717Z"
+     "end_time": "2023-11-29T03:58:27.519839Z",
+     "start_time": "2023-11-29T03:58:27.507692Z"
     }
    },
    "outputs": [
@@ -114,8 +122,8 @@
    "id": "9977a600",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-28T07:38:55.678021Z",
-     "start_time": "2023-11-28T07:38:55.664291Z"
+     "end_time": "2023-11-29T03:58:27.535352Z",
+     "start_time": "2023-11-29T03:58:27.521837Z"
     }
    },
    "outputs": [
@@ -180,8 +188,8 @@
    "id": "74a61df2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-28T07:38:57.318555Z",
-     "start_time": "2023-11-28T07:38:55.680990Z"
+     "end_time": "2023-11-29T03:58:30.170288Z",
+     "start_time": "2023-11-29T03:58:27.537347Z"
     }
    },
    "outputs": [
@@ -225,8 +233,8 @@
    "id": "8016a207",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-28T07:38:58.992250Z",
-     "start_time": "2023-11-28T07:38:57.321704Z"
+     "end_time": "2023-11-29T03:58:35.252725Z",
+     "start_time": "2023-11-29T03:58:30.175190Z"
     }
    },
    "outputs": [
@@ -294,8 +302,8 @@
    "id": "ad4af5be",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-28T07:38:59.007363Z",
-     "start_time": "2023-11-28T07:38:58.994162Z"
+     "end_time": "2023-11-29T03:58:35.283053Z",
+     "start_time": "2023-11-29T03:58:35.258289Z"
     }
    },
    "outputs": [],
@@ -305,12 +313,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "354f9255",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-28T07:39:14.219398Z",
-     "start_time": "2023-11-28T07:39:14.089691Z"
+     "end_time": "2023-11-29T03:58:35.596482Z",
+     "start_time": "2023-11-29T03:58:35.289984Z"
     }
    },
    "outputs": [
@@ -320,7 +328,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -347,12 +355,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "5dedf2de",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-28T07:40:12.853690Z",
-     "start_time": "2023-11-28T07:40:12.821579Z"
+     "end_time": "2023-11-29T03:58:35.642992Z",
+     "start_time": "2023-11-29T03:58:35.604778Z"
     }
    },
    "outputs": [],
@@ -375,12 +383,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "fdc36b73",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-28T07:41:58.880944Z",
-     "start_time": "2023-11-28T07:41:58.858415Z"
+     "end_time": "2023-11-29T03:58:35.673647Z",
+     "start_time": "2023-11-29T03:58:35.649631Z"
     }
    },
    "outputs": [],
@@ -391,12 +399,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "94f39590",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-28T07:42:19.944350Z",
-     "start_time": "2023-11-28T07:42:19.909538Z"
+     "end_time": "2023-11-29T03:58:35.704631Z",
+     "start_time": "2023-11-29T03:58:35.677648Z"
     }
    },
    "outputs": [],
@@ -414,12 +422,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "4c168e21",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-28T07:47:01.440726Z",
-     "start_time": "2023-11-28T07:47:01.379696Z"
+     "end_time": "2023-11-29T03:58:35.782494Z",
+     "start_time": "2023-11-29T03:58:35.709641Z"
     }
    },
    "outputs": [
@@ -432,7 +440,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,22 +452,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "id": "df2fedc0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-28T07:48:47.569115Z",
-     "start_time": "2023-11-28T07:48:47.545666Z"
+     "end_time": "2023-11-29T03:58:35.827663Z",
+     "start_time": "2023-11-29T03:58:35.789616Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.027057732374168975"
+       "0.027101840031382163"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,28 +478,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "id": "34ec86d4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-28T07:48:56.294281Z",
-     "start_time": "2023-11-28T07:48:56.274918Z"
+     "end_time": "2023-11-29T03:58:35.858616Z",
+     "start_time": "2023-11-29T03:58:35.832780Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.025213690906573882"
+       "0.025537366052261312"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "mlr.score(x_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66a085dc",
+   "metadata": {},
+   "source": [
+    "# 제출"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "58969603",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-29T03:58:35.888911Z",
+     "start_time": "2023-11-29T03:58:35.862676Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "sub_file = pd.read_csv(\"../data/sample_submission.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "12f226ce",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-29T03:58:35.920130Z",
+     "start_time": "2023-11-29T03:58:35.896938Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "sub_file['ECLO'] = mlr.predict(df_test)\n",
+    "sub_file['ECLO'] = round(sub_file['ECLO'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "ca9494aa",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-29T03:58:35.982690Z",
+     "start_time": "2023-11-29T03:58:35.930142Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "sub_file.to_csv(\"../data/sub_file/001LR_round.csv\", index=False)"
    ]
   }
  ],
