--- a/002.대구 교통사고 피해 예측 AI 경진대회/code/006.again_preprocessing.ipynb
+++ b/002.대구 교통사고 피해 예측 AI 경진대회/code/006.again_preprocessing.ipynb
@@ -663,21 +663,8 @@
    "source": [
     "df_train = pd.concat([df_train, pd.get_dummies(df_train['요일'])], axis=1)\n",
     "\n",
-    "df_test = pd.concat([df_test, pd.get_dummies(df_test['요일'])], axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
-   "id": "aeacaaa2",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-12-01T07:29:46.072836Z",
-     "start_time": "2023-12-01T07:29:46.045135Z"
-    }
-   },
-   "outputs": [],
-   "source": [
+    "df_test = pd.concat([df_test, pd.get_dummies(df_test['요일'])], axis=1)\n",
+    "\n",
     "df_train.drop(['요일'], axis = 1,inplace = True)\n",
     "df_test.drop(['요일'], axis = 1,inplace = True)"
    ]
