--- a/002.대구 교통사고 피해 예측 AI 경진대회/code/013.again.ipynb
+++ b/002.대구 교통사고 피해 예측 AI 경진대회/code/013.again.ipynb
@@ -647,6 +647,65 @@
    "source": [
     "sub_file.to_csv(\"../data/sub_file/009tf_Huber_round.csv\", index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "1a7adb05",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-03T08:43:06.295980Z",
+     "start_time": "2023-12-03T08:43:05.390461Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "d7354fb0",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-03T08:43:22.798390Z",
+     "start_time": "2023-12-03T08:43:22.755757Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "sf = pd.read_csv(\"../data/sub_file/009tf_Huber_round.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "58dc7ed6",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-03T08:43:31.959368Z",
+     "start_time": "2023-12-03T08:43:31.915902Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.0    9970\n",
+       "3.0     728\n",
+       "5.0     265\n",
+       "Name: ECLO, dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sf.ECLO.value_counts()"
+   ]
   }
  ],
  "metadata": {
