--- a/002.대구 교통사고 피해 예측 AI 경진대회/code/024.retry.ipynb
+++ b/002.대구 교통사고 피해 예측 AI 경진대회/code/024.retry.ipynb
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6cb2b53f",
+   "id": "886d1066",
    "metadata": {},
    "source": [
     "---"
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c375a41b",
+   "id": "d3116019",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-12-10T05:16:56.863490Z",
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "476e6802",
+   "id": "25bd690d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-12-10T08:26:59.672328Z",
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31a82785",
+   "id": "ba1d2a5d",
    "metadata": {},
    "source": [
     "---"
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "19febc39",
+   "id": "b31b0016",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-12-10T08:35:59.136489Z",
@@ -507,6 +507,60 @@
    "outputs": [],
    "source": [
     "sub_file.to_csv(\"../data/sub_file/021automl.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75a3285b",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "73c332eb",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-10T08:40:10.713325Z",
+     "start_time": "2023-12-10T08:40:10.384876Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from supervised.preprocessing.eda import EDA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "c5dc4f8a",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-10T08:41:33.138167Z",
+     "start_time": "2023-12-10T08:41:33.126173Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "28e449dc",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-10T08:41:56.696510Z",
+     "start_time": "2023-12-10T08:41:34.216646Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "EDA.extensive_eda(X,y, save_path='../image/00l_automl/')"
    ]
   }
  ],
