--- a/003.서울시 평균 기온 예측 해커톤/code/004.SARIMAX_003_지수평활.ipynb
+++ b/003.서울시 평균 기온 예측 해커톤/code/004.SARIMAX_003_지수평활.ipynb
@@ -12,25 +12,25 @@
    },
    "outputs": [],
    "source": [
+    "import random\n",
+    "import os\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
     "plt.rc('font', family='Malgun Gothic')  # 폰트 지정\n",
     "plt.rc('axes', unicode_minus=False)  # 마이너스 폰트 설정\n",
     "%config InlineBackend.figure_format = 'retina'  # 그래프 글씨 뚜렷\n",
     "\n",
-    "import os\n",
-    "import random\n",
     "\n",
     "def seed_everything(seed):\n",
     "    random.seed(seed)\n",
     "    os.environ['PYTHONHASHSEED'] = str(seed)\n",
     "    np.random.seed(seed)\n",
+    "\n",
     "\n",
     "seed_everything(42)"
    ]
@@ -104,7 +104,7 @@
    },
    "outputs": [],
    "source": [
-    "Y = df_train[['일시','평균기온']]"
+    "Y = df_train[['일시', '평균기온']]"
    ]
   },
   {
@@ -467,7 +467,8 @@
    "outputs": [],
    "source": [
     "# 모델 생성 및 학습\n",
-    "model = SARIMAX(y_train, order=(1, 0, 1), seasonal_order=(1, 0, 1, 12)) # p,d,q,s\n",
+    "model = SARIMAX(y_train, order=(1, 0, 1),\n",
+    "                seasonal_order=(1, 0, 1, 12))  # p,d,q,s\n",
     "result = model.fit()"
    ]
   },
@@ -483,7 +484,8 @@
    },
    "outputs": [],
    "source": [
-    "pred = result.get_prediction(start=y_test.index[0], end=y_test.index[-1], dynamic=False)\n",
+    "pred = result.get_prediction(\n",
+    "    start=y_test.index[0], end=y_test.index[-1], dynamic=False)\n",
     "pred_ci = pred.conf_int()"
    ]
   },
@@ -519,7 +521,8 @@
     "# 시각화\n",
     "ax = Y['평균기온'].plot(label='observed')\n",
     "pred.predicted_mean.plot(ax=ax, label='One-step ahead Forecast', alpha=0.7)\n",
-    "ax.fill_between(pred_ci.index, pred_ci.iloc[:, 0], pred_ci.iloc[:, 1], color='k', alpha=0.2)\n",
+    "ax.fill_between(\n",
+    "    pred_ci.index, pred_ci.iloc[:, 0], pred_ci.iloc[:, 1], color='k', alpha=0.2)\n",
     "ax.set_xlabel('날짜')\n",
     "ax.set_ylabel('컬럼명')\n",
     "plt.legend()\n",
@@ -563,7 +566,8 @@
    "outputs": [],
    "source": [
     "# 모델 생성 및 학습\n",
-    "model = SARIMAX(y_train, order=(1, 0, 1), seasonal_order=(1, 0, 1, 12)) # p,d,q,s\n",
+    "model = SARIMAX(y_train, order=(1, 0, 1),\n",
+    "                seasonal_order=(1, 0, 1, 12))  # p,d,q,s\n",
     "result = model.fit()"
    ]
   },
@@ -579,7 +583,8 @@
    },
    "outputs": [],
    "source": [
-    "pred = result.get_prediction(start=y_test.index[0], end=y_test.index[-1], dynamic=False)\n",
+    "pred = result.get_prediction(\n",
+    "    start=y_test.index[0], end=y_test.index[-1], dynamic=False)\n",
     "pred_ci = pred.conf_int()"
    ]
   },
@@ -615,7 +620,8 @@
     "# 시각화\n",
     "ax = Y['평균기온'].plot(label='observed')\n",
     "pred.predicted_mean.plot(ax=ax, label='One-step ahead Forecast', alpha=0.7)\n",
-    "ax.fill_between(pred_ci.index, pred_ci.iloc[:, 0], pred_ci.iloc[:, 1], color='k', alpha=0.2)\n",
+    "ax.fill_between(\n",
+    "    pred_ci.index, pred_ci.iloc[:, 0], pred_ci.iloc[:, 1], color='k', alpha=0.2)\n",
     "ax.set_xlabel('날짜')\n",
     "ax.set_ylabel('컬럼명')\n",
     "plt.legend()\n",
@@ -672,7 +678,8 @@
    },
    "outputs": [],
    "source": [
-    "pred = result.get_prediction(start=target.values[0], end=target.values[-1], dynamic=False)"
+    "pred = result.get_prediction(\n",
+    "    start=target.values[0], end=target.values[-1], dynamic=False)"
    ]
   },
   {
@@ -702,7 +709,8 @@
    },
    "outputs": [],
    "source": [
-    "sub_file.to_csv(\"../data/sub/003_SARIMAX_alpha_0.9.csv\", index=False, encoding='utf-8')"
+    "sub_file.to_csv(\"../data/sub/003_SARIMAX_alpha_0.9.csv\",\n",
+    "                index=False, encoding='utf-8')"
    ]
   },
   {
@@ -939,7 +947,8 @@
    "outputs": [],
    "source": [
     "# Holt's Exponential Smoothing 모델 학습\n",
-    "model = ExponentialSmoothing(y_train, trend=None, seasonal=\"add\", seasonal_periods=12)\n",
+    "model = ExponentialSmoothing(\n",
+    "    y_train, trend=None, seasonal=\"add\", seasonal_periods=12)\n",
     "result = model.fit()"
    ]
   },
@@ -997,7 +1006,8 @@
     }
    ],
    "source": [
-    "plt.plot(y_test.index[:100], pred[:100], label='Forecast', linestyle='--', color='orange')"
+    "plt.plot(y_test.index[:100], pred[:100],\n",
+    "         label='Forecast', linestyle='--', color='orange')"
    ]
   },
   {
@@ -1120,7 +1130,8 @@
    },
    "outputs": [],
    "source": [
-    "sub_file.to_csv(\"../data/sub/004_SARIMAX_홀트.csv\", index=False, encoding='utf-8')"
+    "sub_file.to_csv(\"../data/sub/004_SARIMAX_홀트.csv\",\n",
+    "                index=False, encoding='utf-8')"
    ]
   },
   {
